# aktenfux

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
src/: filter.rs  frontmatter.rs  logger.rs  main.rs  output.rs  scanner.rs  yaml_compat.rs
test_vault/: broken-frontmatter.md  meeting-notes.md  no-frontmatter.md  personal-note.md  problematic-frontmatter.md  work-project.md
