[package]
name = "aktenfux"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for indexing and filtering Obsidian vault notes by frontmatter"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[[bin]]
name = "aktenfux"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
yaml-rust2 = "0.10.3"
serde_json = "1.0"
rayon = "1.8"
anyhow = "1.0"
regex = "1.10"
colored = "3.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true